[package]
name = "wenger"
version = "0.0.3"
edition = "2021"
authors = ["Rain Liu <y@liu.mx>"]
description = "Wenger — an asynchronous Rust networking application framework. Wenger is a \"Swiss Army Knife\" that makes it easy to build protocols, application clients, and application servers."
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/wenger"
repository = "https://github.com/wenger-rs/wenger"

[dependencies]
log = "0.4.14"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9.0"
clap = "3"
chrono = "0.4.19"

[[example]]
name = "echo_server"
path = "examples/echo/echo_server.rs"
bench = false
